--- a/src/main/webapp/css/kerub.css
+++ b/src/main/webapp/css/kerub.css
@@ -1,3 +1,12 @@
 .nav-tabs {
     cursor: pointer;
 }
+
+.versioninfobox {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 100px;
+    margin-bottom: auto;
+    width : 200px;
+    height : 240px;
+}
