host details view
Bug-Url: https://github.com/K0zka/kerub/issues/24
Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/src/main/webapp/css/kerub.css
+++ b/src/main/webapp/css/kerub.css
@@ -2,6 +2,11 @@
     cursor: pointer;
 }
 
+.clickable {
+    cursor: pointer;
+    -moz-user-select: none;
+}
+
 .versioninfobox {
     margin-left: auto;
     margin-right: auto;
