user interface bits
Bug-Url: https://github.com/kerubistan/kerub/issues/80
Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/src/main/webapp/css/kerub.css
+++ b/src/main/webapp/css/kerub.css
@@ -24,3 +24,11 @@
       overflow-y: hidden;
       overflow-x: scroll;
 }
+
+/**
+ * fixes for bootstrap
+ */
+
+.has-feedback .form-control-feedback {
+    top: 8px;
+}
