fix for the typeahead
Bug-Url: https://github.com/kerubistan/kerub/issues/80
Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/src/main/webapp/css/kerub.css
+++ b/src/main/webapp/css/kerub.css
@@ -32,3 +32,11 @@
 .has-feedback .form-control-feedback {
     top: 8px;
 }
+
+
+/**
+ * Fix for the typeahead, it does not work with modals without this.
+ */
+.dropdown-menu {
+    z-index: 9999 !important;
+}
