changed the cursor to pointer when choosing expectations
Bug-Url: https://github.com/kerubistan/kerub/issues/129
Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/src/main/webapp/css/kerub.css
+++ b/src/main/webapp/css/kerub.css
@@ -2,6 +2,10 @@
     cursor: pointer;
 }
 
+ul.dropdown-menu li {
+    cursor: pointer;
+}
+
 .clickable {
     cursor: pointer;
     -moz-user-select: none;
