--- a/src/main/webapp/css/kerub.css
+++ b/src/main/webapp/css/kerub.css
@@ -16,8 +16,8 @@ ul.dropdown-menu li {
     margin-right: auto;
     margin-top: 100px;
     margin-bottom: auto;
-    width : 200px;
-    height : 240px;
+    max-width : 200px;
+    max-height : 240px;
 }
 
 .login-screen .media-body {
